--- a/AUTHORS
+++ b/AUTHORS
@@ -17,3 +17,7 @@ Bugfixes, performance and other improvements.
 5. Takeshi Nakatani <ggtakec@gmail.com>
 
 Bugfixes, performance and other improvements.
+
+6. Stefan Pommerening <pom@dmsp.de>
+
+Packaging environments.
