--- a/debian/changelog
+++ b/debian/changelog
@@ -3,6 +3,6 @@ s3fs (1.73.0-0) stable; urgency=low
   * FUSE-based file system backed by Amazon S3
   * Initial packaging for debian
   * Sources from: http://code.google.com/p/s3fs/wiki/FuseOverAmazon
+  * Switch to dpkg-source 3.0 (quilt) format
 
- -- Stefan Pommerening <pom@dmsp.de>  Thu, 26 Sep 2013 08:00:00 +0100
-
+ -- Stefan Pommerening <pom@vTitan03.dmsp.de>  Thu, 26 Sep 2013 13:05:26 +0200
